# clipmind

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Dockerfile.ui  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.context/: experiment_checkpoint_resume.py  phase-0-plan.md  phase-1-plan.md  ui_screenshot_check.py
.github/workflows/: auto-preview-label.yaml  ci.yml  pr-build.yaml
.streamlit/: config.toml
alembic/: env.py  script.py.mako
alembic/versions/: 2a29294e34c3_initial_video_frame_transcript.py  8699c55f1bc4_phase2_detections_and_frame_captions.py
deploy/: app.yaml  kustomization.yaml  namespace.yaml  ui.yaml  virtualservice.yaml
docs/: api-spec.md  architecture.md  cost-estimation.md  evaluation.md  learning-log.md  milestones.md  quality-assurance.md  requirements.md  skills-mapping.md
docs/adr/: 0001-use-langgraph-from-start.md  0002-vector-db-qdrant-single.md  0003-multi-llm-provider.md  0004-langchain-vs-llamaindex.md  0005-youtube-tos-policy.md  0006-evaluation-strategy.md  0007-toolchain.md  0008-orm-sqlmodel.md  0009-object-store-protocol.md  0010-embedding-provider-abstraction.md  README.md
docs/knowledge/: README.md
docs/knowledge/evaluation/: 01-three-layer-evaluation.md
docs/knowledge/fastapi-async/: 01-async-and-websocket.md
docs/knowledge/langchain-agents/: 01-tool-calling.md
docs/knowledge/langgraph/: 01-stategraph-and-reducer.md  02-when-to-use-stategraph.md
docs/knowledge/llm-provider/: 01-abstraction-and-fallback.md
docs/knowledge/multimodal-llm/: 01-vision-captioning.md
docs/knowledge/observability/: 01-langsmith-otel-prometheus.md
docs/knowledge/rag/: 01-hybrid-search.md
docs/knowledge/storage-sqlmodel/: 01-async-sqlmodel-alembic.md
docs/knowledge/toolchain/: 01-uv-and-ruff.md
docs/knowledge/vector-db/: 01-qdrant-basics.md
docs/knowledge/video-processing/: 01-frames-and-detection.md
docs/knowledge/whisper-stt/: 01-transcription.md
eval/: dataset.example.jsonl
src/clipmind/: __init__.py  config.py  worker.py
src/clipmind/agents/: __init__.py  query_agent.py  tools.py
src/clipmind/api/: __init__.py  deps.py  main.py  schemas.py
src/clipmind/api/routes/: __init__.py  ask.py  health.py  progress_ws.py  query.py  videos.py
src/clipmind/eval/: __init__.py  dataset.py  metrics.py  runner.py
src/clipmind/graph/: __init__.py  ingest_graph.py  runner.py  state.py
src/clipmind/graph/nodes/: __init__.py  caption_frames.py  detect_objects.py  extract_audio.py  extract_frames.py  index_segments.py  store.py  transcribe.py  validate.py
src/clipmind/ingest/: __init__.py  audio.py  detector.py  frames.py  progress.py  transcriber.py
src/clipmind/llm/: __init__.py  captioner.py  factory.py  provider.py
src/clipmind/rag/: __init__.py  embeddings.py  factory.py  fuse.py  indexer.py  reranker.py
src/clipmind/storage/: __init__.py  db.py  health.py  models.py  object_store.py
src/clipmind/storage/repositories/: __init__.py  video.py
tests/: conftest.py  test_smoke.py
tests/agents/: test_query_agent.py  test_tools.py
tests/api/: test_health.py  test_metrics.py  test_videos.py  test_videos_list.py
tests/eval/: test_dataset.py  test_metrics.py  test_runner.py
tests/graph/: test_caption_frames_node.py  test_detect_objects_node.py  test_extract_frames_node.py  test_ingest_graph_skeleton.py  test_run_ingest.py
tests/ingest/: test_audio.py  test_frames.py  test_progress.py  test_transcriber.py
tests/llm/: test_factory.py  test_fallback_provider.py
tests/rag/: test_fuse.py  test_indexer.py
tests/storage/: test_video_repo.py
ui/: __init__.py  api_client.py  app.py
